# C-compiler

./: CMakeLists.txt  README.md  compiler.cpp
Analyzer/: analyzer.h
Lexer/: lexer_parser.cpp  lexer_parser.h  lexer_token.h
Lexer/Test/: input.txt  lexer_test.cpp
Lexer/Test/Tests/: 1input.txt  1output.txt  2input.txt  2output.txt  3input.txt  3output.txt  4input.txt  4output.txt  5input.txt  5output.txt  6input.txt  6output.txt
Lexer/Token/: lexer_token.cpp  lexer_token.h
Lexer/Token/Test/: token_test.cpp
Reader/: code_reader.cpp  code_reader.h  code_reader.hpp
Reader/test/: ReaderTest.cpp  input.txt  reader_test.cpp
